<resources>
    <string name="app_name">Stocks Viewer</string>
    <string name="search_stocks">Search stocks</string>
    <string name="cancel">Cancel</string>
    <string name="_1min">1M</string>
    <string name="_5m">5M</string>
    <string name="_1h">1H</string>
    <string name="_4h">4H</string>
    <string name="all">All</string>
    <string name="dividends">Dividends</string>
    <string name="about">About</string>
    <string name="price">$ %s</string>
    <string name="key_statistics">Key Statistics</string>
    <string name="avg_volume">Avg. Volume</string>
    <string name="market_cap">Market Cap</string>
    <string name="beta">Beta</string>
    <string name="status">status</string>
    <string name="chartPointDateBD">%s - %s - %s</string>
    <string name="chartPointDateUtc">%s, %s:%s</string>
    <string name="chartPriceOpen">Open: %s</string>
    <string name="chartPriceClose">Close: %s</string>
    <string name="chartPriceLine">Price: %s</string>
    <string name="chartPriceHigh">High: %s</string>
    <string name="chartPriceLow">Low: %s</string>
    <string name="alert_text_below">below</string>
    <string name="alert_text_above">above</string>
    <string name="price_is_higher">When price is higher than</string>
    <string name="price_is_lower">When price is lower than</string>
    <string name="alert">Alert</string>
    <string name="alerts">Alerts</string>
    <string name="close">Close</string>
    <string name="alert_price">$ %.2f</string>
    <string name="price_percent">(%s%%)</string>
    <string name="your_watchlist">Your WatchList</string>
    <string name="delete_stocks">Delete Favorites</string>
    <string name="delete">Delete</string>
    <string name="latest_news">Latest News</string>
    <string name="page_text">%d Page</string>
    <string name="chart_type">Chart Type</string>
    <string name="chart_range">Chart Range</string>
    <string name="author">By %s</string>
    <string name="settings">Settings</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="light_theme">Light Theme</string>
    <string name="theme">Theme</string>
    <string name="delete_images">Images Cache</string>
    <string name="delete_alerts">Delete Alerts</string>
    <string name="cache">Cache</string>
    <string name="submit">Submit</string>
    <string name="api_key">API Key</string>
    <string name="start">Start</string>
    <string name="licence"><a href="https://financialmodelingprep.com/developer/docs/">Data provided by Financial Modeling Prep</a></string>
    <string name="instruction">To gain access to the app, follow these steps:\n\n 1. <a href="https://site.financialmodelingprep.com/developer">Visit the website;</a>\n 2. Sign up or log in to your account;\n 3. Go to DashBoard;\n 4. Obtain your unique API key by copying it.</string>
    <string name="api_key_error">Invalid Api Key! Try Again!</string>
    <string name="low">Low:</string>
    <string name="no_value">-</string>
    <string name="vol">Vol:</string>
    <string name="_52w_high">52w High</string>
    <string name="_52w_low">52w Low</string>
    <string name="p_e_ratio">P/E Ratio</string>
    <string name="symbol">Symbol</string>
    <string name="exchange">Exchange</string>
    <string name="industry">Industry</string>
    <string name="sector">Sector</string>
    <string name="country">Country</string>
    <string name="ceo">CEO</string>
    <string name="save">Save</string>
    <string name="line">Line</string>
    <string name="candle_stick">Candle Stick</string>
    <string name="bar">Bar</string>
    <string name="baseline">BaseLine</string>
    <string name="add_volume">Add Volume</string>
    <string name="area">Area</string>
    <string name="welcome">Welcome to USA Stock Viewer App!</string>
    <string name="our_app">Our app is to assist you in staying up-to-date with the latest market trends and stock prices.</string>
    <string name="whether_you">Whether you\'re a novice or an experienced investor, our app is easy to use. Let\'s get started and explore the exciting world of investing together!</string>
    <string name="high">High:</string>
    <string name="invalid_price">Invalid price</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="deleted">Deleted</string>
    <string name="stock_item_desc">%s…</string>
    <string name="list_is_empty">List is empty!</string>
</resources>