<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    style="@style/BottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    android:paddingBottom="16dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="30dp"
                android:layout_height="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bottom_sheet_line"
                android:backgroundTint="@color/b4_100"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/chart_range"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/title">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_1m"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/_1min"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_5m"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_5m"
                    app:layout_constraintLeft_toRightOf="@+id/btn_1m"
                    app:layout_constraintTop_toTopOf="@id/btn_1m" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_30m"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="30m"
                    app:layout_constraintLeft_toRightOf="@id/btn_5m"
                    app:layout_constraintTop_toTopOf="@id/btn_5m" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/btn_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/btn_line_1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_1h"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1h"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_4h"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_4h"
                    app:layout_constraintLeft_toRightOf="@id/btn_1h"
                    app:layout_constraintTop_toTopOf="@id/btn_1h" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_all"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    app:layout_constraintLeft_toRightOf="@id/btn_4h"
                    app:layout_constraintTop_toTopOf="@id/btn_4h" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/chart_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/chart_type"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_line_2" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/chart_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chart_type">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/line_chart"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_line_active"
                    android:enabled="false"
                    android:text="@string/line" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/candlestick_chart"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_candle_stick_active"
                    android:text="@string/candle_stick" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bar_chart"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_chart_bar_active"
                    android:text="@string/bar" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/chart_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                app:layout_constraintTop_toBottomOf="@id/chart_line_1">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/baseline_chart"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_baseline_default"
                    android:text="@string/baseline" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/volume_chart"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_volume_active"
                    android:text="@string/add_volume" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/area_chart"
                    style="@style/ChartButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableTop="@drawable/ic_area_active"
                    android:text="@string/area" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>