<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        style="@style/DefaultTextApp"
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="24sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cache_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@+id/top_bar">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:background="@color/light_grey_2" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SettingsDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/cache" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="80"
            android:background="@color/light_grey_2" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/stocks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cache_divider"
        android:background="@drawable/custom_item_list_background"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MediumTextApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_stocks"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextSwitcher
            android:id="@+id/stock_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@+id/delete_stocks"
            app:layout_constraintTop_toTopOf="@+id/delete_stocks"
            app:layout_constraintBottom_toBottomOf="@+id/delete_stocks" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/delete_stocks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:background="@drawable/news_text_background"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/alerts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/stocks"
        android:background="@drawable/custom_item_list_background"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MediumTextApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_alerts"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextSwitcher
            android:id="@+id/alert_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@+id/delete_alerts"
            app:layout_constraintTop_toTopOf="@+id/delete_alerts"
            app:layout_constraintBottom_toBottomOf="@+id/delete_alerts" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/delete_alerts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:background="@drawable/news_text_background"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/alerts"
        android:background="@drawable/custom_item_list_background"
        android:padding="4dp">

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/MediumTextApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_images"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextSwitcher
            android:id="@+id/images_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintRight_toLeftOf="@+id/delete_images"
            app:layout_constraintTop_toTopOf="@+id/delete_images"
            app:layout_constraintBottom_toBottomOf="@+id/delete_images" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/delete_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_check"
            android:background="@drawable/news_text_background"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/theme_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@+id/images">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="10"
            android:background="@color/light_grey_2" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/SettingsDivider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:text="@string/theme" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="80"
            android:background="@color/light_grey_2" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/buttons_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:weightSum="100"
        app:layout_constraintTop_toBottomOf="@+id/theme_divider">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="50"
            android:background="@drawable/custom_item_list_background"
            android:layout_marginEnd="8dp"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MediumTextApp"
                android:id="@+id/text_light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/light_theme"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:id="@+id/light_check"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:backgroundTintMode="src_over"
                android:background="@drawable/check_circle"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="50"
            android:layout_marginStart="8dp"
            android:background="@drawable/custom_item_list_background"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/MediumTextApp"
                android:id="@+id/text_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_theme"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <View
                android:id="@+id/dark_check"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@drawable/check_circle"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>